# ray-tracing-hello-world

./: .gitignore  CMakeLists.txt  Camera.h  Cube.cpp  Cube.h  GlazedSphere.cpp  GlazedSphere.h  IntersectionRecord.h  Light.h  README.md  Ray.h  Sphere.cpp  Sphere.h  Surface.h  TransparentSphere.cpp  TransparentSphere.h  Triangle.cpp  Triangle.h  defs.h  main.cpp  output.ppm  test.cpp  vector.h
shapes/sphere/: DiffusedSphere.h  GlazedSphere.cpp  GlazedSphere.h  Sphere.cpp  Sphere.h  TransparentSphere.cpp  TransparentSphere.h
shapes/triangle/: DiffusedTriangle.cpp  DiffusedTriangle.h  GlazedTriangle.cpp  GlazedTriangle.h  Triangle.cpp  Triangle.h
sphere/: DiffusedSphere.cpp  DiffusedSphere.h  GlazedSphere.cpp  GlazedSphere.h  Sphere.cpp  Sphere.h  TransparentSphere.cpp  TransparentSphere.h
surface/: DiffusedSurface.cpp  DiffusedSurface.h  GlazedSurface.cpp  GlazedSurface.h  TransparentSurface.cpp  TransparentSurface.h
surfaces/: DiffusedSurface.cpp  DiffusedSurface.h  GlazedSurface.cpp  GlazedSurface.h  Surface.h  TransparentSurface.cpp  TransparentSurface.h
test/: test.cpp
